--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>AngularLogin</title>
-  <base href="/">
+  <base href="/">>
+  <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
